# SREagent

./: .env.example  .gitignore  Makefile  README.md  agent.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/app/: config.py  events.py  impact.py  main.py  models.py  prompts.py  state.py  store.py  webhook.py
agent/app/dashboard/: routes.py
agent/app/dashboard/static/: app.js  index.html  md.js  style.css
agent/app/integrations/: gitrepo.py  logs.py  prometheus.py  slack.py
agent/app/investigation/: fallback.py  llm.py  loop.py  stub.py  tools.py
agent/app/postmortem/: generator.py  template.md
agent/app/runbooks/: matcher.py
agent/tests/: conftest.py
agent/tests/fixtures/: alertmanager_firing.json  alertmanager_resolved.json
agent/tests/integration/: test_restart_recovery.py  test_webhook_to_incident.py
agent/tests/smoke/: test_agent_smoke.py
agent/tests/unit/: test_impact.py  test_loop.py  test_matcher.py  test_state.py  test_store.py
ops/alertmanager/: alertmanager.yml
ops/prometheus/: alert_rules.yml  prometheus.yml
runbooks/: database-connection-exhaustion.md  deploy-rollback.md  order-status-errors.md  payment-gateway-outage.md  product-listing-latency.md
scripts/: dev_stub.sh  inject.sh  resolve.sh  seed_history.py
scripts/history_snapshots/: Dockerfile_pre  catalog_pre_v1.py  catalog_pre_v2.py  order_utils_pre.py  payment_client_pre.py  requirements_pre.txt
services/loadgen/: Dockerfile  loadgen.py
services/shopapi/: .dockerignore  Dockerfile  README.md  requirements.txt
(+10 files in other folders)
